@@ -1,3 +1,10 @@
+2005-03-16  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b5
+
+	* Fix:  The logic for determining whether to strip EXIF in IM6 is
+	  the backwards of IM5.  As so elequently put by fryfrog:
+	  "<fryfrog> so in 5.x they always dumped exif but had an option 
+	  to preserve and in 6.x they preserve with an option to dump?"
+
 2005-03-15  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b4
 
 	* Fix: Added Minimum Headers according to RFC 822 in gallery mail.
